Bug 263181 - Automatically hide notification area when all notifications have been dismissed
Summary: Automatically hide notification area when all notifications have been dismissed
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Contact list (other bugs)
Version First Reported In: SVN
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 194663 229573 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-01-14 22:06 UTC by Kai Uwe Broulik
Modified: 2011-04-11 04:12 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2011-01-14 22:06:53 UTC
Version:           SVN (using KDE 4.5.95) 
OS:                Linux

In kopete there‘s this notification area indicated by this flag and it automatically opens when there is a new event such as someone added you to his contact list. It doesn‘t close automatically, however, when all notifications have been dismissed which leaves you with a blank empty useless area with just a close button.

Reproducible: Always
Comment 1 Lamarque V. Souza 2011-02-09 04:48:40 UTC
SVN commit 1219496 by lvsouza:

Hide InfoEventIconLabel if server messages reaches zero.

BUG: 263181


 M  +3 -1      kopetewindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1219496
Comment 2 Lamarque V. Souza 2011-02-09 04:49:57 UTC
SVN commit 1219497 by lvsouza:

Backport r1219496. by lvsouza from trunk to the 4.6 branch:

Hide InfoEventIconLabel if server messages reaches zero.

CCBUG: 263181


 M  +3 -1      kopetewindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1219497
Comment 3 Lamarque V. Souza 2011-03-16 23:04:52 UTC
*** Bug 229573 has been marked as a duplicate of this bug. ***
Comment 4 Lamarque V. Souza 2011-04-11 04:12:32 UTC
*** Bug 194663 has been marked as a duplicate of this bug. ***