Hide InfoEventIconLabel if server messages reaches zero.

BUG: 263181

svn path=/trunk/KDE/kdenetwork/kopete/; revision=1219496